--- a/components/atom/button/src/index.scss
+++ b/components/atom/button/src/index.scss
@@ -1,5 +1,5 @@
 @import '~@s-ui/theme/lib/index';
 @import './buttonSpinnerIcon/index';
-
 @import './styles/settings.scss';
 @import './styles/index.scss';
+@import './styles/custom-properties.scss';
