--- a/components/atom/button/src/styles/index.scss
+++ b/components/atom/button/src/styles/index.scss
@@ -1,12 +1,13 @@
-$base-class: '.sui-AtomButton';
-
-#{$base-class} {
+.sui-AtomButton {
   @include reset-button;
   @include button-icon($icon-sz-atom-button, $icon-m-atom-button);
 
-  border-radius: $bdrs-atom-button;
+  background-color: var(--background-color); // New (solid)
+  border-radius: var(--border-radius);
   border: $bdw-s solid;
+  border-color: var(--border-color); // New (solid)
   box-sizing: border-box;
+  color: var(--color); // New (solid)
   display: inline-block;
   position: relative;
   font: {
@@ -19,7 +20,9 @@ $base-class: '.sui-AtomButton';
   min-width: $sz-atom-button;
   outline: 0;
   padding: 0 $p-atom-button;
+  text-align: var(--text-align);
   text-decoration: none;
+  text-decoration-line: none; // ???
   text-transform: $tt-atom-button;
   white-space: nowrap;
 
@@ -37,27 +40,8 @@ $base-class: '.sui-AtomButton';
       margin-right: 0;
     }
 
-    &--middle {
-      &#{$base-class} {
-        border-radius: 0;
-      }
-    }
-
-    &--first {
-      &#{$base-class} {
-        border-radius: $bdrs-atom-button-first;
-      }
-    }
-
-    &--last {
-      &#{$base-class} {
-        border-radius: $bdrs-atom-button-last;
-      }
-    }
-
     &--selected {
-      &#{$base-class} {
-        border-radius: $bdrs-atom-button-group-selected;
+      &.sui-AtomButton {
         box-shadow: $bxsh-atom-button-group-selected;
       }
     }
@@ -75,11 +59,11 @@ $base-class: '.sui-AtomButton';
   }
 
   &--loading {
-    #{$base-class}-inner {
+    .sui-AtomButton-inner {
       justify-content: center;
     }
 
-    #{$base-class}-text {
+    .sui-AtomButton-text {
       opacity: 0;
     }
   }
@@ -107,151 +91,115 @@ $base-class: '.sui-AtomButton';
     position: absolute;
   }
 
-  &#{$base-class}--link:not(#{$base-class}--solid):not(#{$base-class}--outline):not(#{$base-class}--flat) {
-    background: transparent;
+  // Links
+  &.sui-AtomButton--link:not(.sui-AtomButton--solid):not(.sui-AtomButton--outline):not(.sui-AtomButton--flat) {
+    // Overwritten mixin for testing purposes.
+    //@include link();
+    font-family: $ff-link;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: $fw-link;
+    letter-spacing: normal;
+    line-height: $lh-link;
+    text-align: left;
+    // Actual properties.
+    // background: transparent;
     user-select: text;
     border: none;
-    @include link();
     padding: 0;
     justify-content: center;
-    text-align: center;
     text-decoration: $td-atom-button-link;
+
     @include button-focused {
-      background: transparent;
+      // background: transparent;
+      text-decoration: underline;
     }
 
-    &#{$base-class}--negative {
-      background: transparent;
+    &.sui-AtomButton--negative {
+      // background: transparent;
+
       @include button-focused {
-        background: transparent;
+        // background: transparent;
       }
     }
   }
 
-  // Types, colors and align text
-  @each $name, $pair in $c-atom-button-colors {
-    $color: nth($pair, 1);
-    $color-invert: nth($pair, 2);
-
-    &--#{$name} {
-      &#{$base-class}--solid {
-        background: $color;
-        border-color: $color;
-        color: $color-invert;
-        text-decoration-line: none;
-
-        @include button-focused {
-          background: if(
-            length($pair) > 2,
-            nth($pair, 3),
-            color-variation($color, -1)
-          );
-
-          border-color: if(
-            length($pair) > 2,
-            nth($pair, 3),
-            color-variation($color, -1)
-          );
-        }
-
-        &#{$base-class}--negative {
-          background: $color-invert;
-          border-color: $color-invert;
-          color: $color;
-
-          @include button-focused {
-            background: color-variation($color, 4);
-            border-color: color-variation($color, 4);
-          }
-        }
-      }
-
-      &#{$base-class}--outline,
-      &#{$base-class}--flat {
-        $bgc-atom-button-focused: color-variation($color, 4) !default;
-        $bgc-atom-button-focused-invert: color-variation($color, -1) !default;
-        $c-atom-button-focused: $color !default;
-        $c-atom-button-focused-invert: $color-invert !default;
-
-        border-color: $color;
-        color: $color;
-        text-decoration-line: none;
-
-        @include button-focused {
-          background: if(
-            length($pair) > 2,
-            nth($pair, 4),
-            $bgc-atom-button-focused
-          );
-
-          @if ($color != $c-atom-button-focused) {
-            color: $c-atom-button-focused;
-          }
-        }
-
-        &#{$base-class}--negative {
-          border-color: $color-invert;
-          color: $color-invert;
-
-          @include button-focused {
-            background: $bgc-atom-button-focused-invert;
-            @if ($color-invert != $c-atom-button-focused-invert) {
-              color: $c-atom-button-focused-invert;
-            }
-          }
-        }
-      }
-      &#{$base-class}--link:not(#{$base-class}--solid):not(#{$base-class}--outline):not(#{$base-class}--flat) {
-        $c-atom-button-focused: color-variation($color, -1) !default;
-        $c-atom-button-link-focused: $c-atom-button-focused !default;
-        $c-atom-button-focused-invert: color-variation(
-          $color-invert,
-          -1
-        ) !default;
-
-        color: $color;
-        @include button-focused {
-          color: $c-atom-button-link-focused;
-        }
-
-        &#{$base-class}--negative {
-          color: $color-invert;
-
-          @include button-focused {
-            color: $c-atom-button-focused-invert;
-          }
-        }
-      }
-    }
-  }
-
-  &--outline,
-  &--negative {
-    background: none;
-  }
-
-  &--flat {
-    border: 0;
-  }
-
+  // Designs
   &--solid {
-    &#{$base-class}--primary {
+    &.sui-AtomButton--primary {
       box-shadow: $bxsh-atom-button-solid-primary;
 
-      &#{$base-class}--negative {
+      &.sui-AtomButton--negative {
         box-shadow: $bxsh-atom-button-solid-primary-negative;
       }
     }
   }
 
+  // &--outline {
+  //   background: none;
+  // }
+
+  &--flat {
+    border: 0;
+  }
+
+  // Shapes
+  &--circular {
+    @include button-circular($sz-atom-button);
+  }
+
+  // Sizes
+  &--small {
+    @include button-icon($icon-sz-atom-button-small, $icon-m-atom-button-small);
+    font-size: $fz-atom-button-small;
+    font-weight: $fw-atom-button-small;
+    height: $sz-atom-button-small;
+    min-width: $sz-atom-button-small;
+    padding: 0 $p-atom-button-small;
+
+    &.sui-AtomButton--circular {
+      @include button-circular($sz-atom-button-small);
+    }
+  }
+
+  &--large {
+    @include button-icon($icon-sz-atom-button-large, $icon-m-atom-button-large);
+    font-size: $fz-atom-button-large;
+    font-weight: $fw-atom-button-large;
+    height: $sz-atom-button-large;
+    min-width: $sz-atom-button-large;
+    padding: 0 $p-atom-button-large;
+
+    &.sui-AtomButton--circular {
+      @include button-circular($sz-atom-button-large);
+    }
+  }
+
+  // Modifiers
+  &--disabled {
+    cursor: default;
+    opacity: 0.3;
+    pointer-events: none;
+  }
+
+  &--fullWidth {
+    justify-content: center;
+    width: 100%;
+  }
+
+  // &--negative {
+  //   background: none; // ???
+  // }
+
+  // Box shadow
   @each $key-bxsh, $bxsh in $bxsh-atom-button {
     &--elevation-#{$key-bxsh} {
       box-shadow: $bxsh;
 
-      &#{$base-class}--primary {
+      &.sui-AtomButton--primary {
         box-shadow: $bxsh;
 
-        &#{$base-class}--negative {
+        &.sui-AtomButton--negative {
           box-shadow: $bxsh;
         }
       }
@@ -262,77 +210,11 @@ $base-class: '.sui-AtomButton';
     box-shadow: $bxsh-atom-button-focus;
   }
 
-  &--squared {
-    border-radius: 0;
-  }
-
-  &--circular {
-    @include button-circular($sz-atom-button);
-  }
-
-  &--center {
-    text-align: center;
-  }
-
-  &--left {
-    text-align: left;
-  }
-
-  &--right {
-    text-align: right;
-  }
-
-  // Modifiers
-  &--disabled {
-    cursor: default;
-    opacity: 0.3;
-    pointer-events: none;
-  }
-
-  &--small {
-    @include button-icon($icon-sz-atom-button-small, $icon-m-atom-button-small);
-    font-size: $fz-atom-button-small;
-    font-weight: $fw-atom-button-small;
-    height: $sz-atom-button-small;
-    min-width: $sz-atom-button-small;
-    padding: 0 $p-atom-button-small;
-
-    &#{$base-class}--squared {
-      border-radius: 0;
-    }
-
-    &#{$base-class}--circular {
-      @include button-circular($sz-atom-button-small);
-    }
-  }
-
-  &--large {
-    @include button-icon($icon-sz-atom-button-large, $icon-m-atom-button-large);
-    border-radius: $bdrs-atom-button-large;
-    font-size: $fz-atom-button-large;
-    font-weight: $fw-atom-button-large;
-    height: $sz-atom-button-large;
-    min-width: $sz-atom-button-large;
-    padding: 0 $p-atom-button-large;
-
-    &#{$base-class}--squared {
-      border-radius: 0;
-    }
-
-    &#{$base-class}--circular {
-      @include button-circular($sz-atom-button-large);
-    }
-  }
-
-  &--fullWidth {
-    justify-content: center;
-    width: 100%;
-  }
-
+  // Other types
   &--empty {
     padding: 0;
-    #{$base-class}-leftIcon,
-    #{$base-class}-rightIcon {
+    .sui-AtomButton-leftIcon,
+    .sui-AtomButton-rightIcon {
       margin: 0;
     }
   }
