feat(components/atom/tag): Allows to customize color and background color for the AtomTag

--- a/components/atom/tag/demo/index.scss
+++ b/components/atom/tag/demo/index.scss
@@ -12,8 +12,10 @@ $atom-tag-types: (
   'warning': (
     bgc: orange,
     c: white,
-    bgc-hover: color-variation(orange, 2),
-    c-hover: white
+    c-hover: white,
+    c-icon-close: blue,
+    c-icon-close-hover: blue,
+    bgc-icon-close-hover: color-variation(blue, 2)
   ),
   'special': (
     bgc: blue,
