fix(components/atom/switch): FullWidth switch should have the text with align left

--- a/components/atom/switch/src/styles/index.scss
+++ b/components/atom/switch/src/styles/index.scss
@@ -259,5 +259,9 @@ $base-class: '.sui-AtomSwitch';
 
   &--fullWidth {
     width: 100%;
+
+    .sui-AtomLabel {
+      text-align: left;
+    }
   }
 }
