--- a/components/atom/button/src/styles/settings.scss
+++ b/components/atom/button/src/styles/settings.scss
@@ -27,19 +27,15 @@ $icon-m-atom-button-large: $m-m !default;
 $m-consecutive-atom-button: $m-m !default;
 
 $bdrs-atom-button-group-selected: none !default;
-$bxsh-atom-button-group-selected: none !default;
+// $bxsh-atom-button-group-selected: none !default;
 $bd-atom-button-group-focused: 1px solid !default;
 $bdrs-atom-button-first: $bdrs-m 0 0 $bdrs-m !default;
 $bdrs-atom-button-last: 0 $bdrs-m $bdrs-m 0 !default;
 
-$bxsh-atom-button-solid-primary: none !default;
-$bxsh-atom-button-solid-primary-negative: none !default;
-
-$bxsh-atom-button: (
-  large: $bxsh-l,
-  medium: $bxsh-m
-) !default;
-$bxsh-atom-button-focus: none !default;
+// $bxsh-atom-button: (
+//   large: $bxsh-l,
+//   medium: $bxsh-m
+// ) !default;
 
 $tt-atom-button: none !default;
 
