feat(components/primitive/theme): update custom properties

--- a/components/primitive/theme/src/index.scss
+++ b/components/primitive/theme/src/index.scss
@@ -53,4 +53,9 @@
   --p-m: 8px;
   --p-s: 4px;
   --p-xs: 2px;
+
+  // Box shadows
+  --bxsh-s: 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+  --bxsh-m: 0 1px 4px 0 rgba(0, 0, 0, 0.24);
+  --bxsh-l: 0 3px 8px 0 rgba(0, 0, 0, 0.16);
 }
