feat(Root): fix serialize method

--- a/components/atom/button/src/styles/custom-properties.scss
+++ b/components/atom/button/src/styles/custom-properties.scss
@@ -133,13 +133,13 @@
 
   // Designs
   &--solid {
-    &#{$root}--primary {
-      --box-shadow: none; // ??
+    // &#{$root}--primary {
+    //   --box-shadow: none; // ??
 
-      &#{$root}--negative {
-        --box-shadow: none; // ??
-      }
-    }
+    //   &#{$root}--negative {
+    //     --box-shadow: none; // ??
+    //   }
+    // }
 
     &#{$root}--focused,
     &:active {
