feat(components/atom/panel): Pass isFullWidth and isFullHeight properties

--- a/components/atom/panel/src/styles/index.scss
+++ b/components/atom/panel/src/styles/index.scss
@@ -31,6 +31,14 @@ $base-class: '.sui-atom-panel';
     }
   }
 
+  &--fullWidth {
+    width: 100%;
+  }
+
+  &--fullHeight {
+    height: 100%;
+  }
+
   &-image {
     @extend %sui-atom-panel-image;
 
