--- a/components/atom/panel/src/styles/index.scss
+++ b/components/atom/panel/src/styles/index.scss
@@ -4,6 +4,9 @@ $base-class: '.sui-atom-panel';
   @each $type, $attr in $bdrs-atom-panel-rounded {
     &--rounded-#{$type} {
       border-radius: $attr;
+      &::before {
+        border-radius: $attr;
+      }
     }
   }
 
