--- a/components/molecule/dropdownList/src/styles/settings.scss
+++ b/components/molecule/dropdownList/src/styles/settings.scss
@@ -2,6 +2,8 @@ $h-dropdown-list--small: 145px !default;
 $h-dropdown-list--medium: 220px !default;
 $h-dropdown-list--large: 300px !default;
 
+$m-dropdown-list--design-flat: 0 !default;
+
 $bc-dropdown-list: $c-white !default;
 $bd-dropdown-list: $bdw-s solid color-variation($c-gray, 2) !default;
 $p-dropdown-list: $p-s !default;
