feat(components/molecule/collapsible): Update for print styles

--- a/components/molecule/collapsible/src/styles/index.scss
+++ b/components/molecule/collapsible/src/styles/index.scss
@@ -72,6 +72,10 @@ $base-class: '.sui-MoleculeCollapsible';
         width: 100%;
       }
     }
+
+    @media print {
+      display: none;
+    }
   }
 
   &-icon {
