feat(components/molecule/dropdownOption): add token for selected option color

--- a/components/molecule/dropdownOption/src/styles/index.scss
+++ b/components/molecule/dropdownOption/src/styles/index.scss
@@ -69,6 +69,7 @@ $base-class: '.sui-MoleculeDropdownOption';
 
   &.is-selected:not(&-checkbox) &-text {
     font-weight: $fw-molecule-dropdown-option-selected-text;
+    color: $c-molecule-dropdown-option-selected-text;
   }
 
   &--disabled {
