--- a/components/molecule/dropdownOption/src/_settings.scss
+++ b/components/molecule/dropdownOption/src/_settings.scss
@@ -10,6 +10,7 @@ $bdrs-molecule-dropdown-option: $bdr-molecule-dropdown-option !default;
 $bg-molecule-dropdown-option--highlight-mark: $c-highlight !default;
 $bg-molecule-dropdown-option-selected: none !default;
 $fw-molecule-dropdown-option-selected-text: $fw-bold !default;
+$c-molecule-dropdown-option-selected-text: inherit !default;
 $fz-molecule-dropdown-option-text: inherit !default;
 $fw-molecule-dropdown-option--highlight-mark: normal !default;
 $lh-molecule-dropdown-option-line-wrap-text: $lh-m !default;
