feat(components/molecule/dropdownOption): add left addon prop

--- a/components/molecule/dropdownOption/src/_settings.scss
+++ b/components/molecule/dropdownOption/src/_settings.scss
@@ -23,6 +23,7 @@ $mt-molecule-dropdown-option-description: $m-s !default;
 $mr-molecule-dropdown-option-description: 0 !default;
 $mb-molecule-dropdown-option-description: 0 !default;
 $ml-molecule-dropdown-option-description: $m-s !default;
+$g-molecule-dropdown-option: $m-m !default;
 $p-molecule-dropdown-option: $p-l !default;
 $pl-molecule-dropdown-option: $p-molecule-dropdown-option !default;
 $pr-molecule-dropdown-option: $p-molecule-dropdown-option !default;
