--- a/components/molecule/dropdownOption/demo/index.scss
+++ b/components/molecule/dropdownOption/demo/index.scss
@@ -1,4 +1,5 @@
 @import '../src/index';
+@import '~@s-ui/react-atom-image/lib/index';
 
 .DemoMoleculeDropdownOption {
   padding: 20px;
@@ -11,5 +12,11 @@
   pre {
     padding: 16px;
     width: 300px;
+  }
+
+  &-image {
+    display: flex;
+    height: $sz-icon-m;
+    width: $sz-icon-m;
   }
 }
