--- a/components/atom/panel/src/styles/settings.scss
+++ b/components/atom/panel/src/styles/settings.scss
@@ -1,7 +1,9 @@
 $bdrs-atom-panel-rounded: (
   'm': $bdrs-m,
   'l': $bdrs-m * 2,
-  'xl': $bdrs-m * 3
+  'xl': $bdrs-m * 3,
+  'xxl': $bdrs-m * 6,
+  'giant': $bdrs-m * 8
 ) !default;
 
 $bxsh-atom-panel-elevation: (
