fix(components/molecule/dropdownOption): add line-height inherit to dropdownOption text

--- a/components/molecule/dropdownOption/src/styles/index.scss
+++ b/components/molecule/dropdownOption/src/styles/index.scss
@@ -30,6 +30,7 @@ $base-class: '.sui-MoleculeDropdownOption';
 
   &-text {
     font-size: $fz-molecule-dropdown-option-text;
+    line-height: $lh-molecule-dropdown-option-text;
     flex-basis: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
