--- a/components/molecule/dropdownOption/src/_settings.scss
+++ b/components/molecule/dropdownOption/src/_settings.scss
@@ -17,6 +17,7 @@ $fw-molecule-dropdown-option--highlight-mark: normal !default;
 $lh-molecule-dropdown-option-line-wrap-text: $lh-m !default;
 $ln-molecule-dropdown-option-two-lines-text: $lh-molecule-dropdown-option-line-wrap-text !default; // deprecated
 $ml-molecule-dropdown-option-text: $m-s !default;
+$lh-molecule-dropdown-option-text: inherit !default;
 $c-molecule-dropdown-option-description: $c-gray !default;
 $fz-molecule-dropdown-option-description: inherit !default;
 $mt-molecule-dropdown-option-description: $m-s !default;
