feat(components/molecule/select): Add a Search input to search over the options on the select

--- a/components/molecule/select/src/styles/index.scss
+++ b/components/molecule/select/src/styles/index.scss
@@ -14,6 +14,18 @@ $class-select-atom-input-tags: '#{$class-select-atom-input}--withTags';
   }
 
   &-inputSelect {
+    &-search {
+      border-top: $bd-dropdown-list;
+      border-left: $bd-dropdown-list;
+      border-right: $bd-dropdown-list;
+      padding: $p-m $p-l;
+      background-color: $bgc-atom-input;
+      z-index: $z-dropdown-menu;
+
+      &--hidden {
+        display: none;
+      }
+    }
     &-container {
       align-items: center;
       border: $bd-select;
