refactor(components/atom/videoPlayer): Avoid having multiple points not complying with the OCP

--- a/components/atom/videoPlayer/src/index.scss
+++ b/components/atom/videoPlayer/src/index.scss
@@ -17,7 +17,15 @@ $fourByThreeAspectRatio: calc(100% / 4 * 3);
 
 .sui-AtomVideoPlayer {
   &-nativePlayer {
-    width: 100%;
+    &Video {
+      width: 100%;
+    }
+  }
+
+  &-hlsPlayer {
+    &Video {
+      width: 100%;
+    }
   }
 
   &-vimeoPlayer {
