--- a/components/molecule/select/src/styles/index.scss
+++ b/components/molecule/select/src/styles/index.scss
@@ -15,11 +15,11 @@ $class-select-atom-input-tags: '#{$class-select-atom-input}--withTags';
 
   &-inputSelect {
     &-search {
-      border-top: $bd-dropdown-list;
-      border-left: $bd-dropdown-list;
-      border-right: $bd-dropdown-list;
-      padding: $p-m $p-l;
-      background-color: $bgc-atom-input;
+      border-radius: $bdrs-molecule-select-search;
+      border: $bd-molecule-select-search;
+      border-bottom: $bd-bottom-molecule-select-search;
+      padding: $p-molecule-select-search;
+      background-color: $bgc-molecule-select-search;
       z-index: $z-dropdown-menu;
 
       &--hidden {
