feat(components/molecule/dropdownOption): Allow to hide the option without removing it from the DOM

--- a/components/molecule/dropdownOption/src/styles/index.scss
+++ b/components/molecule/dropdownOption/src/styles/index.scss
@@ -105,4 +105,8 @@ $base-class: '.sui-MoleculeDropdownOption';
     padding: $pt-molecule-dropdown-option-with-description
       $pl-molecule-dropdown-option;
   }
+
+  &.is-hidden {
+    display: none;
+  }
 }
