feat(components/atom/videoPlayer): Add component demo

--- a/components/atom/videoPlayer/src/index.scss
+++ b/components/atom/videoPlayer/src/index.scss
@@ -24,7 +24,8 @@ $fourByThreeAspectRatio: calc(100% / 4 * 3);
 
   &-hlsPlayer {
     &Video {
-      width: 100%;
+      max-width: 100%;
+      min-height: 300px;
     }
   }
 
