feat(components/molecule/phoneValidation): Use sui input

--- a/components/molecule/phoneValidation/src/index.scss
+++ b/components/molecule/phoneValidation/src/index.scss
@@ -27,8 +27,13 @@
       width: 100%;
 
       &Container {
+        width: 100%;
         align-items: center;
         display: flex;
+
+        & > input {
+          background: none;
+        }
 
         &.splitted {
           border-radius: $bdrs-l;
