--- a/components/atom/input/src/Input/Wrappers/Icons/index.scss
+++ b/components/atom/input/src/Input/Wrappers/Icons/index.scss
@@ -1,25 +1,14 @@
-#{$base-class}--withIcon {
-  position: relative;
-  width: 100%;
+@use 'sass:math';
 
-  &--left #{$base-class-input} {
-    padding-left: $pl-atom-input-input;
-  }
+$base-class-with-icon: '#{$base-class}--withIcon';
 
-  &--right #{$base-class-input} {
-    padding-right: $pr-atom-input-input;
-  }
-
-  &-icon {
+#{$base-class} {
+  #{$base-class-with-icon}-icon {
     align-items: center;
     color: $c-atom-input-icon;
     display: flex;
     fill: $c-atom-input-icon;
-    height: $w-atom-input-icon;
     justify-content: center;
-    position: absolute;
-    top: $t-atom-input-icon;
-    transform: translateY($trf-ty-atom-input-icon);
     width: $w-atom-input-icon;
     pointer-events: none;
 
@@ -29,16 +18,25 @@
     }
 
     &--left {
-      left: $l-atom-input-icon;
+      #{$base-class-with-icon}-icon--content {
+        width: $w-atom-input-icon;
+      }
     }
 
     &--right {
-      right: $r-atom-input-icon;
+      #{$base-class-with-icon}-icon--content {
+        width: $w-atom-input-icon;
+      }
     }
-
-    & > * {
-      height: 100%;
-      width: 100%;
+  }
+  @each $state, $color in $states-atom-input {
+    &#{$base-class}--status-#{$state} {
+      #{$base-class-with-icon}-icon {
+        #{$base-class-with-icon}-icon--content {
+          color: $color;
+          fill: $color;
+        }
+      }
     }
   }
 }
