--- a/components/atom/input/src/Input/Component/index.scss
+++ b/components/atom/input/src/Input/Component/index.scss
@@ -7,29 +7,77 @@ $class-read-only: '#{$base-class-input}--readOnly';
   -webkit-appearance: none;
 
   @include sui-atom-input-input;
-  background-color: transparent;
+  border-radius: $bdrs-atom-input;
   min-height: auto;
   text-overflow: $tov-atom-input-placeholder;
-  padding-left: 0;
-  padding-right: 0;
-  border: 0 solid transparent;
-  &#{$base-class-input}--charsSize {
+  &--charsSize {
     width: inherit;
   }
 
-  &#{$base-class-input}--hidden {
+  &--hidden {
     display: none;
+  }
+
+  &--readOnly {
+    background: $bgc-atom-input-read-only;
+    border: $bd-atom-input-read-only;
+    color: $c-atom-input-read-only;
+  }
+
+  @include atom-input-shape-wrapper(
+    $base-class,
+    $base-class-input,
+    $bdrs-atom-input-shapes,
+    $sizes-atom-input,
+    $bdrs-atom-input,
+    $h-atom-input--m
+  );
+
+  &#{$base-class-input}--noBorder,
+  &#{$base-class-input}--noBorder:disabled {
+    border: 0;
+    &:focus {
+      border: 0;
+      box-shadow: none;
+      outline: 0;
+    }
   }
 
   &::placeholder {
     color: $c-atom-input-placeholder;
   }
 
-  &:focus {
-    box-shadow: none;
+  &:disabled {
+    pointer-events: none;
+
+    &:not(#{$class-read-only}) {
+      -webkit-text-fill-color: $c-atom-input-disabled;
+
+      background: $bgc-atom-input-disabled;
+      border: $bd-atom-input-disabled;
+      color: $c-atom-input-disabled;
+    }
   }
-  &:focus-visible {
-    outline: 0;
+
+  &:focus {
+    @include sui-atom-input-input-focus;
+  }
+
+  @each $type, $attr in $sizes-atom-input {
+    &-size-#{$type} {
+      height: $attr;
+      min-height: $attr;
+    }
+  }
+
+  @each $state, $color in $states-atom-input {
+    &.sui-AtomInput-input--#{$state} {
+      border-color: $color;
+
+      &:focus {
+        box-shadow: $bxsh-atom-input-size $color;
+      }
+    }
   }
 
   &[type='number'] {
