--- a/components/atom/input/src/Input/Wrappers/Button/index.scss
+++ b/components/atom/input/src/Input/Wrappers/Button/index.scss
@@ -1,3 +1,13 @@
-#{$base-class}--withButton-button {
-  overflow: hidden;
+#{$base-class}--withButton {
+  display: flex;
+  width: 100%;
+
+  &-input {
+    flex: 1;
+    width: 100%;
+  }
+
+  &-button {
+    margin-left: $m-m;
+  }
 }
