--- a/components/atom/input/src/Input/Wrappers/Icons/index.scss
+++ b/components/atom/input/src/Input/Wrappers/Icons/index.scss
@@ -1,14 +1,25 @@
-@use 'sass:math';
+#{$base-class}--withIcon {
+  position: relative;
+  width: 100%;
 
-$base-class-with-icon: '#{$base-class}--withIcon';
+  &--left #{$base-class-input} {
+    padding-left: $pl-atom-input-input;
+  }
 
-#{$base-class} {
-  #{$base-class-with-icon}-icon {
+  &--right #{$base-class-input} {
+    padding-right: $pr-atom-input-input;
+  }
+
+  &-icon {
     align-items: center;
     color: $c-atom-input-icon;
     display: flex;
     fill: $c-atom-input-icon;
+    height: $w-atom-input-icon;
     justify-content: center;
+    position: absolute;
+    top: $t-atom-input-icon;
+    transform: translateY($trf-ty-atom-input-icon);
     width: $w-atom-input-icon;
     pointer-events: none;
 
@@ -18,25 +29,16 @@ $base-class-with-icon: '#{$base-class}--withIcon';
     }
 
     &--left {
-      #{$base-class-with-icon}-icon--content {
-        width: $w-atom-input-icon;
-      }
+      left: $l-atom-input-icon;
     }
 
     &--right {
-      #{$base-class-with-icon}-icon--content {
-        width: $w-atom-input-icon;
-      }
+      right: $r-atom-input-icon;
     }
-  }
-  @each $state, $color in $states-atom-input {
-    &#{$base-class}--status-#{$state} {
-      #{$base-class-with-icon}-icon {
-        #{$base-class-with-icon}-icon--content {
-          color: $color;
-          fill: $color;
-        }
-      }
+
+    & > * {
+      height: 100%;
+      width: 100%;
     }
   }
 }
