fix(components/molecule/stepper): fix styles of compressed horizontal stepper

--- a/components/molecule/stepper/src/styles/index.scss
+++ b/components/molecule/stepper/src/styles/index.scss
@@ -37,6 +37,7 @@ $base-class: '.sui-MoleculeStepper';
         &-horizontal {
           position: relative;
           gap: $sz-base;
+          overflow: $o-stepper-compressed;
         }
       }
     }
