--- a/components/molecule/stepper/src/styles/settings.scss
+++ b/components/molecule/stepper/src/styles/settings.scss
@@ -1,5 +1,7 @@
 @use 'sass:math';
 
+$o-stepper-compressed: visible !default;
+
 // Colors
 $c-stepper: $c-gray-light-2 !default; // $c-progress-steps-bar
 $c-stepper-label: $c-gray-dark-2 !default; // $c-progress-steps-label
