fix(components/molecule/stepper): change styles

--- a/components/molecule/stepper/src/styles/index.scss
+++ b/components/molecule/stepper/src/styles/index.scss
@@ -30,6 +30,7 @@ $base-class: '.sui-MoleculeStepper';
       // do your magic
     }
     &-compressed {
+      overflow: hidden;
       &#{$base-class}--alignment {
         &-vertical {
           row-gap: $sz-base;
@@ -37,7 +38,6 @@ $base-class: '.sui-MoleculeStepper';
         &-horizontal {
           position: relative;
           gap: $sz-base;
-          overflow: $o-stepper-compressed;
         }
       }
     }
