feat(components/molecule/phoneInput): Rename component

--- a/components/molecule/phoneInput/src/index.scss
+++ b/components/molecule/phoneInput/src/index.scss
@@ -4,7 +4,7 @@
 @import '~@s-ui/react-molecule-dropdown-option/lib/index';
 @import '~@s-ui/react-molecule-dropdown-list/lib/index';
 
-.sui-MoleculePhoneValidation {
+.sui-MoleculePhoneInput {
   display: flex;
   flex-direction: column;
   gap: $m-l;
