--- a/components/atom/switch/src/styles/index.scss
+++ b/components/atom/switch/src/styles/index.scss
@@ -102,7 +102,7 @@ $base-class: '.sui-AtomSwitch';
 
     &:disabled {
       background-color: $c-gray-lightest;
-      border: $bdw-s solid $c-gray-lightest;
+      border: $bdw-atom-switch-default solid $c-gray-lightest;
       cursor: not-allowed;
       #{$base-class}-circle {
         background-color: $c-gray-lightest;
@@ -110,7 +110,7 @@ $base-class: '.sui-AtomSwitch';
     }
     &[aria-checked='true'] {
       background-color: $c-atom-switch--active;
-      border: $bdw-s solid $c-atom-switch--active;
+      border: $bdw-atom-switch-default solid $c-atom-switch--active;
       cursor: pointer;
       &:disabled {
         cursor: not-allowed;
@@ -135,7 +135,7 @@ $base-class: '.sui-AtomSwitch';
       border-radius: ($h-atom-switch-default - 2) * 0.5;
       border: $bdw-s solid $c-atom-switch-circle;
       box-shadow: 2px 0 2px 0 $c-gray-light;
-      height: $h-atom-switch-default - 2px;
+      height: $h-atom-switch-circle-default - 2px;
       width: $w-atom-switch-circle-default - 2px;
       transition: margin-left $atom-switch-transition-time ease-in-out;
       margin: 0px;
