feat(components/atom/button): button inner inherits text decoration

--- a/components/atom/button/src/styles/index.scss
+++ b/components/atom/button/src/styles/index.scss
@@ -72,6 +72,7 @@ $base-class: '.sui-AtomButton';
     display: inline-flex;
     height: 100%;
     pointer-events: none;
+    text-decoration: inherit;
   }
 
   &--loading {
