fix(components/atom/tag): substitute outline for border property in outline tag styles

--- a/components/atom/tag/src/styles/index.scss
+++ b/components/atom/tag/src/styles/index.scss
@@ -104,7 +104,7 @@ $base-class: '.sui-AtomTag';
     }
 
     &#{$self}--outline {
-      border-color: $c-atom-tag-actionable-invert;
+      outline-color: $c-atom-tag-actionable-invert;
       color: $c-atom-tag-actionable-invert;
       fill: $c-atom-tag-actionable-invert;
 
@@ -184,7 +184,7 @@ $base-class: '.sui-AtomTag';
 
   &--outline {
     background-color: $bgc-atom-tag-outline;
-    border: $bdw-atom-tag-outline solid $bc-atom-tag-outline;
+    outline: $bdw-atom-tag-outline solid $bc-atom-tag-outline;
   }
 
   @each $name, $type in $atom-tag-types {
